opam-version: "2.0"
synopsis: "Run continuous benchmarks for repositories"
maintainer: ["Rizo I. <rizo@tarides.com>" "Gargi Sharma <gargi@tarides.com>"]
authors: ["Rizo I. <rizo@tarides.com>" "Gargi Sharma <gargi@tarides.com>"]
homepage: "https://github.com/ocurrent/current-bench"
bug-reports: "https://github.com/ocurrent/current-bench/issues"
dev-repo: "git+https://github.com/ocurrent/current-bench.git"

depends: [
  "ocaml"   {>= "4.13.0"}
  "dune" {>= "2.0" & <= "3.5"}
  "yojson"
  "reason" {>= "dev"}
  "bechamel"
  "bos"
  "capnp-rpc-unix"
  "cmdliner" {>= "1.1.0"}
  "current"        {= "dev"}
  "current_docker" {= "dev"}
  "current_git"    {= "dev"}
  "current_github" {= "dev"}
  "current_rpc"    {= "dev"}
  "current_slack"  {= "dev"}
  "current_web"    {= "dev"}
  "current_incr" {>= "0.5"}
  "current_ansi"
  "current_ocluster" {= "dev"}
  "ocluster-api"     {= "dev"}
  "ocluster-worker"  {= "dev"}
  "obuilder"         {= "dev"}
  "obuilder-spec"    {= "dev"}
  "dockerfile"
  "duration"
  "fpath"
  "logs"
  "postgresql"
  "prometheus-app" {= "1.2"}
  "rresult"
  "omigrate"
  "timere"
  "timere-parse"
  "alcotest" {with-test}
  "alcotest-lwt" {with-test}
]

pin-depends: [
  [ "reason.dev" "git+https://github.com/reasonml/reason.git#ccc34729994b4a80d4f6274cc0165cd9113444d6"]
# These pins point to the latest version of ocurrent
# When the next ocurrent release hits opam, the pins can be removed entirely
# When modifying, don't forget to also modify pipeline/pipeline.opam
  [ "current_docker.dev"   "git+https://github.com/ocurrent/ocurrent.git#5661fe2848c586efa3c7d82c39fa0d0a7a5e5c53"]
  [ "current_github.dev"   "git+https://github.com/ocurrent/ocurrent.git#5661fe2848c586efa3c7d82c39fa0d0a7a5e5c53"]
  [ "current_git.dev"      "git+https://github.com/ocurrent/ocurrent.git#5661fe2848c586efa3c7d82c39fa0d0a7a5e5c53"]
  [ "current.dev"          "git+https://github.com/ocurrent/ocurrent.git#5661fe2848c586efa3c7d82c39fa0d0a7a5e5c53"]
  [ "current_rpc.dev"      "git+https://github.com/ocurrent/ocurrent.git#5661fe2848c586efa3c7d82c39fa0d0a7a5e5c53"]
  [ "current_slack.dev"    "git+https://github.com/ocurrent/ocurrent.git#5661fe2848c586efa3c7d82c39fa0d0a7a5e5c53"]
  [ "current_web.dev"      "git+https://github.com/ocurrent/ocurrent.git#5661fe2848c586efa3c7d82c39fa0d0a7a5e5c53"]
# The above comment is only relevant to the above pins. Ask art-w for the pins below.
  [ "current_ocluster.dev" "git+https://github.com/art-w/ocluster.git#e32a5022b90c288a14947520a77bdc2ab7789a07"]
  [ "ocluster-api.dev"     "git+https://github.com/art-w/ocluster.git#e32a5022b90c288a14947520a77bdc2ab7789a07"]
  [ "ocluster-worker.dev"  "git+https://github.com/art-w/ocluster.git#e32a5022b90c288a14947520a77bdc2ab7789a07"]
  [ "obuilder.dev"         "git+https://github.com/ocurrent/obuilder#dc987c12ccc6cd9729809359e9375bfe5443add9"]
  [ "obuilder-spec.dev"    "git+https://github.com/ocurrent/obuilder#dc987c12ccc6cd9729809359e9375bfe5443add9"]
]

depexts: [
  [ "jq" ] {}
]

build: [
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

available: [ os-distribution != "alpine" ]
