opam-version: "2.0"
synopsis: "Run continuous benchmarks for repositories"
maintainer: ["Rizo I. <rizo@tarides.com>" "Gargi Sharma <gargi@tarides.com>"]
authors: ["Rizo I. <rizo@tarides.com>" "Gargi Sharma <gargi@tarides.com>"]
homepage: "https://github.com/ocurrent/current-bench"
bug-reports: "https://github.com/ocurrent/current-bench/issues"
dev-repo: "git+https://github.com/ocurrent/current-bench.git"

depends: [
  "ocaml"   {>= "4.13.0"}
  "dune" {>= "2.0"}
  "yojson"
  "reason" {>= "dev"}
  "bechamel"
  "bos"
  "capnp-rpc-unix"
  "cmdliner" {>= "1.1.0"}
  "current"        {>= "0.6.4"}
  "current_docker" {>= "0.6.4"}
  "current_git"    {>= "0.6.4"}
  "current_github" {>= "0.6.4"}
  "current_rpc"    {>= "0.6.4"}
  "current_slack"  {>= "0.6.4"}
  "current_web"    {>= "0.6.4"}
  "current_incr" {>= "0.5"}
  "current_ansi"
  "current_ocluster" {= "dev"}
  "ocluster-api"     {= "dev"}
  "ocluster-worker"  {= "dev"}
  "obuilder"         {= "dev"}
  "obuilder-spec"    {= "dev"}
  "dockerfile"
  "duration"
  "fpath"
  "logs"
  "postgresql"
  "prometheus-app" {= "1.2"}
  "rresult"
  "omigrate"
  "timere"
  "timere-parse"
  "alcotest" {with-test}
  "alcotest-lwt" {with-test}
]

pin-depends: [
  [ "reason.dev" "git+https://github.com/reasonml/reason.git#ccc34729994b4a80d4f6274cc0165cd9113444d6"]
  [ "current_ocluster.dev" "git+https://github.com/art-w/ocluster.git#e32a5022b90c288a14947520a77bdc2ab7789a07"]
  [ "ocluster-api.dev"     "git+https://github.com/art-w/ocluster.git#e32a5022b90c288a14947520a77bdc2ab7789a07"]
  [ "ocluster-worker.dev"  "git+https://github.com/art-w/ocluster.git#e32a5022b90c288a14947520a77bdc2ab7789a07"]
  [ "obuilder.dev"         "git+https://github.com/ocurrent/obuilder#dc987c12ccc6cd9729809359e9375bfe5443add9"]
  [ "obuilder-spec.dev"    "git+https://github.com/ocurrent/obuilder#dc987c12ccc6cd9729809359e9375bfe5443add9"]
]

depexts: [
  [ "jq" ] {}
]

build: [
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

available: [ os-distribution != "alpine" ]
