opam-version: "2.0"
synopsis: "Run continuous benchmarks for repositories"
maintainer: ["Rizo I. <rizo@tarides.com>" "Gargi Sharma <gargi@tarides.com>"]
authors: ["Rizo I. <rizo@tarides.com>" "Gargi Sharma <gargi@tarides.com>"]
homepage: "https://github.com/ocurrent/current-bench"
bug-reports: "https://github.com/ocurrent/current-bench/issues"
dev-repo: "git+https://github.com/ocurrent/current-bench.git"

depends: [
  "ocaml"   {>= "4.13.0"}
  "dune" {>= "2.0"}
  "yojson"
  "bechamel"
  "bos"
  "capnp-rpc-unix"
  "cmdliner" {>= "1.1.0"}
  "current"        {>= "0.6.4"}
  "current_docker" {>= "0.6.4"}
  "current_git"    {>= "0.6.4"}
  "current_github" {>= "0.6.4"}
  "current_rpc"    {>= "0.6.4"}
  "current_slack"  {>= "0.6.4"}
  "current_web"    {>= "0.6.4"}
  "current_incr" {>= "0.5"}
  "current_ansi"
  "current_ocluster" {>= "0.2.1"}
  "ocluster-api"     {>= "0.2.1"}
  "ocluster-worker"  {>= "0.2.1"}
  "obuilder"         {>= "0.5.1"}
  "obuilder-spec"    {>= "0.5.1"}
  "dockerfile"
  "duration"
  "fpath"
  "logs"
  "postgresql"
  "prometheus-app" {>= "1.2"}
  "rresult"
  "omigrate"
  "timere"
  "timere-parse"
  "alcotest" {with-test}
  "alcotest-lwt" {with-test}
]

depexts: [
  [ "jq" ] {}
]

build: [
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

available: [ os-distribution != "alpine" ]
