opam-version: "2.0"
synopsis: "OCurrent pipeline for index benchmarks"
description:
  "This pipeline runs the index benchmarks and publishes them to slack."
maintainer: ["Rizo Isrof <rizo@tarides.com>" "Gargi Sharma <gargi@tarides.com>"]
authors: ["Rizo Isrof <rizo@tarides.com" "Craig Ferguson <craig@tarides.com>" "Gargi Sharma <gargi@tarides.com>"]
homepage: "https://github.com/ocurrent/current-bench"
bug-reports: "https://github.com/ocurrent/current-bench/issues"
depends: [
  "ocaml" {>= "4.13.0"}
  "dune" {>= "2.0" & <= "3.5"}
  "alcotest" {with-test}
  "alcotest-lwt" {with-test}
  "bisect_ppx" {with-test}
  "bos"
  "capnp-rpc-unix"
  "cmdliner" {>= "1.1.0"}
  "current"        {>= "0.6.4"}
  "current_docker" {>= "0.6.4"}
  "current_git"    {>= "0.6.4"}
  "current_github" {>= "0.6.4"}
  "current_rpc"    {>= "0.6.4"}
  "current_slack"  {>= "0.6.4"}
  "current_web"    {>= "0.6.4"}
  "current_incr" {>= "0.5"}
  "current_ansi"
  "current_ocluster" {= "dev"}
  "dockerfile"
  "duration"
  "fpath"
  "logs"
  "postgresql"
  "ptime" {>= "0.8.1"}
  "rresult"
  "omigrate"
  "ocluster" {= "dev"}
  "timere"
  "timere-parse"
]
pin-depends: [
  [ "current_ocluster.dev" "git+https://github.com/art-w/ocluster.git#e32a5022b90c288a14947520a77bdc2ab7789a07"]
  [ "ocluster.dev"         "git+https://github.com/art-w/ocluster.git#e32a5022b90c288a14947520a77bdc2ab7789a07"]
  [ "ocluster-api.dev"     "git+https://github.com/art-w/ocluster.git#e32a5022b90c288a14947520a77bdc2ab7789a07"]
  [ "ocluster-worker.dev"  "git+https://github.com/art-w/ocluster.git#e32a5022b90c288a14947520a77bdc2ab7789a07"]
  [ "obuilder.dev"         "git+https://github.com/ocurrent/obuilder#dc987c12ccc6cd9729809359e9375bfe5443add9"]
  [ "obuilder-spec.dev"    "git+https://github.com/ocurrent/obuilder#dc987c12ccc6cd9729809359e9375bfe5443add9"]
]
build: [
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ocurrent/current-bench.git"
