(lang dune 2.9)

(name cb-worker)

(generate_opam_files true)

(source
 (github ocurrent/current-bench))

(package
 (name cb-worker)
 (synopsis "OCurrent pipeline for index benchmarks")
 (description
  "This pipeline runs the index benchmarks and publishes them to slack.")
 (maintainers
  "Ambre Austen Suhamy <ambre@tarides.com>"
  "Puneeth Chaganti <puneeth@tarides.com>"
  "Shakthi Kannan")
 (authors
  "Rizo Isrof <rizo@tarides.com"
  "Craig Ferguson <craig@tarides.com>"
  "Gargi Sharma <gargi@tarides.com>")
 (depends
  (ocaml
   (>= 4.08))
  dune
  capnp-rpc-unix
  (cmdliner
   (>= 1.1.0))
  dockerfile
  fpath
  logs
  (obuilder
   (>= 0.5.1))
  (obuilder-spec
   (>= 0.5.1))
  (ocluster-api
   (>= 0.2.1))
  (ocluster-worker
   (>= 0.2.1))
  (prometheus-app
   (>= 1.2))
  rresult
  sha
  sqlite3
  tar-unix
  yojson))
