(library
 (name pipeline)
 (libraries
  capnp-rpc-unix
  current
  current.fs
  current_docker
  current_git
  current_github
  current_ocluster
  current_slack
  current_web
  dockerfile
  fmt.tty
  logs
  logs.fmt
  postgresql
  prometheus
  ptime.clock.os
  rresult
  str
  timedesc
  timedesc.tzdb.full
  timedesc.tzlocal.unix
  timere-parse
  uri
  yojson)
 (preprocess
  (pps ppx_deriving_yojson)))
