(library
 (name pipeline)
 (public_name pipeline)
 (libraries
  capnp-rpc-unix
  cb-schema
  current
  current.fs
  current_docker
  current_git
  current_github
  current_ocluster
  current_slack
  current_web
  dockerfile
  fmt.tty
  logs
  logs.fmt
  postgresql
  prometheus
  ptime.clock.os
  rresult
  str
  timedesc
  timere
  timere-parse
  uri
  yojson)
 (preprocess
  (pps ppx_deriving_yojson)))
