(test
 (name test)
 (libraries alcotest alcotest-lwt current current.fs current_docker
   current_git current_github current_ocluster capnp-rpc-unix current_web
   current_slack dockerfile fmt.tty logs logs.fmt prometheus rresult uri
   timedesc.tzdb.full timedesc.tzlocal.unix timedesc timere-parse yojson str)
 (preprocess
  (pps ppx_deriving_yojson))
 (instrumentation
  (backend bisect_ppx)))

; copy everything but *.pp.ml

(copy_files ../lib/**[!.]??.ml)
