(test
 (name test)
 (libraries
  alcotest
  alcotest-lwt
  capnp-rpc-unix
  cb-schema
  color
  current
  current.fs
  current_docker
  current_git
  current_github
  current_ocluster
  current_slack
  current_web
  dockerfile
  dream
  fmt.tty
  logs
  logs.fmt
  prometheus
  ptime.clock.os
  rresult
  str
  timedesc
  timedesc.tzdb.full
  timedesc.tzlocal.unix
  timere-parse
  tyxml
  uri
  yojson)
 (preprocess
  (pps ppx_deriving_yojson))
 (instrumentation
  (backend bisect_ppx)))

; copy everything but *.pp.ml

(copy_files ../lib/**[!.]??.ml)
